# advanced_diploma

./: pyproject.toml
app/: api.py  database.py  main.py  models.py  schemas.py  sсhemas.py
